Fixed an issue with Hmtl class

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <h1 class="heading"> Order Summary </h1>
 
-        <p class="text text-color"">
+        <p class="text text-color">
 
           You can now listen to millions of songs, audiobooks, and podcasts on any 
           device anywhere you like!
@@ -56,7 +56,7 @@
 
           <div class="price">
 
-            <h3 id="plan-heading"> Annual Plan </h3>
+            <h2 id="plan-heading"> Annual Plan </h2>
 
             <span id="price-tag" class="text-color"> $59.99/year </span>
 
